Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="https://www.dropbox.com/s/cjzsp5bxc7arkq0/Map.jpg" alt="Screenshot"></p>
+        <p><img src="http://i.imgur.com/G78utcC.jpg"></p>
       </section>
     </div>
 
